google font 'lato' added

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no" />
 
     <!-- GLOBAL CSS -->
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link href="css/style.css" rel="stylesheet"/>
+
 
 </head>
 <body ng-view >
@@ -23,7 +25,10 @@
         
         <h1>select parking type</h1>
         <img src="images/img_park_on.png" alt="parking meter on"><img src="images/img_disc_on.png" alt="parking disc on">
-
+        <!--<ul>
+            <li><a href="#">park here</a></li>
+            <li><a href="#">report controller</a></li>
+        </ul>-->
 
     </section>
 
