#main-screen-to-park done - blue & red btn + css tweaked.

--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
         
         <h1>select parking type</h1>
         <img src="images/img_park_on.png" alt="parking meter on"><img src="images/img_disc_on.png" alt="parking disc on">
-        <!--<ul>
-            <li><a href="#">park here</a></li>
-            <li><a href="#">report controller</a></li>
-        </ul>-->
+        <ul>
+            <li><a href="#" class="blueBtn">park here</a></li>
+            <li><a href="#" class="redBtn">report controller</a></li>
+        </ul>
 
     </section>
 
