#main-screen-to-park retake - from <a> buttons to <button>

--- a/public/index.html
+++ b/public/index.html
@@ -21,14 +21,16 @@
 
     </section>
         
-    <section id="main-screen-to-park">
+    <section id="main-screen-to-park" class="">
         
         <h1>select parking type</h1>
         <img src="images/img_park_on.png" alt="parking meter on"><img src="images/img_disc_on.png" alt="parking disc on">
-        <ul>
+        <!--<ul>
             <li><a href="#" class="blueBtn">park here</a></li>
             <li><a href="#" class="redBtn">report controller</a></li>
-        </ul>
+        </ul>-->
+        <button type="submit" class="blueBtn">park here</button>
+        <button type="submit" class="redBtn">report controller</button>
 
     </section>
 
