#park-here-disc done

--- a/public/index.html
+++ b/public/index.html
@@ -47,11 +47,11 @@
 
     </section>
 
-    <section id="park-here-disc">
+    <section id="park-here-disc" class="">
 
         <img src="images/img_disc_on.png" alt="parking disc">
 
-        <label for="time"><input type="text" name="time" id="time" placeholder="enter time"/></label>
+            <time>2:00</time>
         <div class="btn-group">
             <button type="submit" class="greenBtn">parking notes</button>
             <button type="submit" class="blueBtn">confirm</button>
