#park-here-notes done

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
         <img src="images/img_park_on.png" alt="parking meter on">
 
         <label for="time"><input type="text" name="time" id="time" placeholder="enter time"/></label>
+
         <div class="btn-group">
             <button type="submit" class="greenBtn">parking notes</button>
             <button type="submit" class="blueBtn">confirm</button>
@@ -47,11 +48,12 @@
 
     </section>
 
-    <section id="park-here-disc" class="">
+    <section id="park-here-disc" class="hideThis">
 
         <img src="images/img_disc_on.png" alt="parking disc">
 
             <time>2:00</time>
+
         <div class="btn-group">
             <button type="submit" class="greenBtn">parking notes</button>
             <button type="submit" class="blueBtn">confirm</button>
@@ -59,9 +61,15 @@
 
     </section>
 
-    <section id="park-here-notes">
-        
+    <section id="park-here-notes" class="">
 
+        <h1>notes</h1>
+        <label for="notes"><textarea>type your notes here...</textarea></label>
+
+        <div class="btn-group">
+            <button type="submit" class="greenBtn">save</button>
+            <button type="submit" class="redBtn">cancel</button>
+        </div>
 
     </section>
 
