#main-screen-parked buttons added/mostly done

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
 
     </section>
 
-    <section id="park-here-notes" class="">
+    <section id="park-here-notes" class="hideThis">
 
         <h1>notes</h1>
         <label for="notes"><textarea>type your notes here...</textarea></label>
@@ -74,8 +74,17 @@
     </section>
 
     <section id="main-screen-parked">
-        
 
+        <h1>Time remaining</h1>
+
+        <span class="disc-on"><time>00:14</time></span>
+        
+        <div class="btn-group">
+            <button type="submit" class="greenBtn">go</button>
+            <button type="submit" class="blueBtn">+ extend stay</button>
+            <button type="submit" class="lightBlueBtn">dude, where is my car ?</button>
+            <button type="submit" class="redBtn">report controller</button>
+        </div>
 
     </section>
 
