HTML & CSS 4 320px resol done, next > 360

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
     </section>
 
 
-    <section id="report-controller">
+    <section id="report-controller" class="hideThis">
         <nav>
             <span>back</span>
             <span>cancel</span>
