#main-screen-to-park @media min360

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html ng-app="app">
 <head>
     <title>Parking</title>
+
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no" />
 
@@ -21,7 +22,7 @@
 
     </section>
         
-    <section id="main-screen-to-park" class="hideThis">
+    <section id="main-screen-to-park" class="">
         
         <h1>select parking type</h1>
 
