#park-here-disc @media min360 done

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
     </section>
         
-    <section id="main-screen-to-park" class="">
+    <section id="main-screen-to-park" class="hideThis">
         
         <h1>select parking type</h1>
 
@@ -49,7 +49,7 @@
 
     </section>
 
-    <section id="park-here-disc" class="hideThis">
+    <section id="park-here-disc" class="">
 
         <img src="images/img_disc_on.png" alt="parking disc">
 
