#main-screen-parked @media min360 done

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 
     </section>
 
-    <section id="park-here-disc" class="">
+    <section id="park-here-disc" class="hideThis">
 
         <img src="images/img_disc_on.png" alt="parking disc">
 
@@ -74,7 +74,7 @@
 
     </section>
 
-    <section id="main-screen-parked" class="hideThis">
+    <section id="main-screen-parked" class="">
 
         <h1>Time remaining</h1>
 
