#report-controller @media min360 done

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
 
     </section>
 
-    <section id="main-screen-parked" class="">
+    <section id="main-screen-parked" class="hideThis">
 
         <h1>Time remaining</h1>
 
@@ -90,7 +90,7 @@
     </section>
 
 
-    <section id="report-controller" class="hideThis">
+    <section id="report-controller" class="">
         <nav>
             <span>back</span>
             <span>cancel</span>
