--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no" />
 
+    <!-- JQUERY -->
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0-beta.1/jquery.mobile-1.3.0-beta.1.min.css" />
+    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.3.0-beta.1/jquery.mobile-1.3.0-beta.1.min.js"></script>   
+
     <!-- GLOBAL CSS -->
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link href="css/style.css" rel="stylesheet"/>
@@ -22,11 +27,12 @@
 
     </section>
         
-    <section id="main-screen-to-park" class="hideThis">
+    <section id="main-screen-to-park" class="">
         
         <h1>select parking type</h1>
 
-        <img src="images/img_park_on.png" alt="parking meter on"><img src="images/img_disc_on.png" alt="parking disc on">
+        <a href="#"><img src="images/img_park_on.png" alt="parking meter on"></a>
+        <a href="#"><img src="images/img_disc_on.png" alt="parking disc on"></a>
 
          <div class="btn-group">
             <button type="submit" class="blueBtn">park here</button>
@@ -90,7 +96,7 @@
     </section>
 
 
-    <section id="report-controller" class="">
+    <section id="report-controller" class="hideThis">
         <nav>
             <span>back</span>
             <span>cancel</span>
