data-role=none and css hideThis deleted as unnecessary now

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
 <div class="wrap">
 
-    <section id="landing-page" data-role="page">
+    <section id="landing-page" data-role="">
         
         <!-- loading page -->
 
@@ -42,61 +42,61 @@
     </section>
 
 
-    <section id="park-here-meter" class="hideThis" data-role="page">
+    <section id="park-here-meter" data-role="page">
         
         <img src="images/img_park_on.png" alt="parking meter on">
 
         <label for="time"><input type="text" name="time" id="time" placeholder="enter time"/></label>
 
         <div class="btn-group">
-            <button type="submit" class="greenBtn">parking notes</button>
-            <button type="submit" class="blueBtn">confirm</button>
+            <button type="submit" class="greenBtn" data-role="none">parking notes</button>
+            <button type="submit" class="blueBtn" data-role="none">confirm</button>
         </div>
 
     </section>
 
-    <section id="park-here-disc" class="hideThis" data-role="page">
+    <section id="park-here-disc" data-role="page">
 
         <img src="images/img_disc_on.png" alt="parking disc">
 
             <time>2:00</time>
 
         <div class="btn-group">
-            <button type="submit" class="greenBtn">parking notes</button>
-            <button type="submit" class="blueBtn">confirm</button>
+            <button type="submit" class="greenBtn" data-role="none">parking notes</button>
+            <button type="submit" class="blueBtn" data-role="none">confirm</button>
         </div>
 
     </section>
 
-    <section id="park-here-notes" class="hideThis" data-role="page">
+    <section id="park-here-notes"  data-role="page">
 
         <h1>notes</h1>
         <label for="notes"><textarea>type your notes here...</textarea></label>
 
         <div class="btn-group">
-            <button type="submit" class="greenBtn">save</button>
-            <button type="submit" class="redBtn">cancel</button>
+            <button type="submit" class="greenBtn" data-role="none">save</button>
+            <button type="submit" class="redBtn" data-role="none">cancel</button>
         </div>
 
     </section>
 
-    <section id="main-screen-parked" class="hideThis" data-role="page">
+    <section id="main-screen-parked" data-role="page">
 
         <h1>Time remaining</h1>
 
         <span class="disc-on"><time>00:14</time></span>
 
         <div class="btn-group">
-            <button type="submit" class="greenBtn">go</button>
-            <button type="submit" class="blueBtn">+ extend stay</button>
-            <button type="submit" class="lightBlueBtn">dude, where is my car ?</button>
-            <button type="submit" class="redBtn">report controller</button>
+            <button type="submit" class="greenBtn" data-role="none">go</button>
+            <button type="submit" class="blueBtn" data-role="none">+ extend stay</button>
+            <button type="submit" class="lightBlueBtn" data-role="none">dude, where is my car ?</button>
+            <button type="submit" class="redBtn" data-role="none">report controller</button>
         </div>
 
     </section>
 
 
-    <section id="report-controller" class="hideThis" data-role="page">
+    <section id="report-controller" data-role="page">
         <nav>
             <span>back</span>
             <span>cancel</span>
