jquery icons inactive to active

--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,13 @@
         
         <h1>select parking type</h1>
 
-        <a href="#park-here-meter"><img src="images/img_park_on.png" alt="parking meter on"></a>
-        <a href="#park-here-disc"><img src="images/img_disc_on.png" alt="parking disc on"></a>
+        <!--<a href="#park-here-meter"><img src="images/img_park_on.png" alt="parking meter on"</a>
+        <a href="#park-here-disc"><img src="images/img_disc_on.png" alt="parking disc on"></a>-->
+        <img class="meter_off" src="images/img_park_off.png" alt="meter off">
+        <img class="disc_off" src="images/img_disc_off.png" alt="disc off">
 
          <div class="btn-group">
-            <a href="#park-here-meter" class="blueBtn" data-role="none">park here</a>
+            <a href="" class="blueBtn" data-role="none">park here</a>
             <a href="#report-controller" class="redBtn" data-role="none">report controller</button></a>
         </div>
 
@@ -113,6 +115,7 @@
     </section>    
     
 </div>
+<script src="js/parking-app.js"></script>
 </body>
 
 
