transition between pages added

--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,9 @@
         <img class="disc_off" src="images/img_disc_off.png" alt="disc off">
 
          <div class="btn-group">
-           
-            <a href="" class="blueBtn" data-role="none">park here</a>
-            <a href="#report-controller" class="redBtn" data-role="none">report controller</button></a>
+
+            <a href="" class="blueBtn" data-role="none" data-transition="flip">park here</a>
+            <a href="#report-controller" class="redBtn" data-role="none" data-transition="flip">report controller</button></a>
         </div>
 
     </section>
@@ -50,7 +50,7 @@
         <label for="time"><input type="text" name="time" id="time" placeholder="enter time" data-role="none"/></label>
 
         <div class="btn-group">
-            <a  href="#park-here-notes" class="greenBtn" data-role="none">parking notes</a>
+            <a  href="#park-here-notes" class="greenBtn" data-role="none" data-transition="flip">parking notes</a>
             <button type="submit" class="blueBtn" data-role="none">confirm</button>
         </div>
 
@@ -63,7 +63,7 @@
             <time>2:00</time>
 
         <div class="btn-group">
-            <a href="#park-here-notes" class="greenBtn" data-role="none">parking notes</a>
+            <a href="#park-here-notes" class="greenBtn" data-role="none" data-transition="flip">parking notes</a>
             <button type="submit" class="blueBtn" data-role="none">confirm</button>
         </div>
 
@@ -76,7 +76,7 @@
 
         <div class="btn-group">
             <button class="greenBtn" type="submit" data-role="none">save</button>
-            <button class="redBtn" type="submit" data-role="none">cancel</button>
+            <button class="redBtn" type="submit" data-role="none" >cancel</button>
         </div>
 
     </section>
@@ -91,7 +91,7 @@
             <button type="submit" class="greenBtn" data-role="none">go</button>
             <a href="#" class="blueBtn" data-role="none">+ extend stay</a>
             <a href="google.com" class="lightBlueBtn" data-role="none">dude, where is my car ?</a>
-            <a href="#report-controller" class="redBtn" data-role="none">report controller</a>
+            <a href="#report-controller" class="redBtn" data-role="none" data-transition="flip">report controller</a>
         </div>
 
     </section>
@@ -99,8 +99,8 @@
 
     <section id="report-controller" class="" data-role="page">
         <nav>
-            <span><a href="" data-role="none">back</a></span>
-            <span><a href="" data-role="none">cancel</a></span>
+            <span><a href="" data-role="none" data-transition="flip">back</a></span>
+            <span><a href="" data-role="none" data-transition="flip">cancel</a></span>
         </nav>
 
         <img src="images/whistle.png" alt="red whistle report controller">
